--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <link rel="stylesheet" href="style.css"> 
     </head> 
     <body>
+    	<div id="container"> 
         <canvas id="gameCanvas" ></canvas>
+        </div>
     <script src="snake.js"> </script>
     </body>
 </html> 
